<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  xmlns:app="http://schemas.android.com/apk/res-auto"
	  tools:context=".view.activity.MainActivity">
	
	<item
		android:id="@+id/action_search"
		android:icon="@drawable/ic_search_white"
		android:orderInCategory="99"
		android:title="@string/action_search"
		app:actionViewClass="android.support.v7.widget.SearchView"
		app:showAsAction="ifRoom|collapseActionView"
		/>
	
	<item
		android:id="@+id/action_settings"
		android:orderInCategory="100"
		android:title="@string/action_settings"
		android:icon="@drawable/ic_settings_white_24dp"
		app:showAsAction="never"
		/>
	
	<item
		android:id="@+id/action_about"
		android:orderInCategory="101"
		android:title="@string/action_about"
		app:showAsAction="never"
		/>
	
	<!--<item-->
		<!--android:id="@+id/action_support"-->
		<!--android:orderInCategory="102"-->
		<!--android:title="@string/action_support"-->
		<!--app:showAsAction="never"-->
		<!--/>-->


</menu>
